--- a/app/static/setup_wizard.html
+++ b/app/static/setup_wizard.html
@@ -10,7 +10,14 @@
 <body class="wizard-body">
     <div class="wizard-container">
         <div class="wizard-header">
-            <h1>🚀 Welcome to Solvia</h1>
+            <h1>
+            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="inline-icon-8">
+                <path d="M4.5 16.5c-1.5 1.5-1.5 4.5 0 6s4.5 1.5 6 0l10-10c1-1 1-2.5 0-3.5s-2.5-1-3.5 0l-10 10z"></path>
+                <path d="M13.5 6.5l4 4"></path>
+                <path d="M12 2l2 2-2 2-2-2 2-2z"></path>
+            </svg>
+            Welcome to Solvia
+        </h1>
             <p>Let's connect your Google Search Console to get started.</p>
         </div>
 
@@ -44,7 +51,7 @@
                         <li>Set up your personalized dashboard</li>
                     </ol>
                 </div>
-                <div class="btn-group" style="margin-top: 2rem;">
+                <div class="btn-group btn-group-top-margin">
                     <button class="btn btn-secondary" onclick="skipSetup()">Skip for now</button>
                     <button class="btn btn-primary" id="auth-btn" onclick="startGoogleAuth()">
                         <span id="auth-btn-text">Connect</span>
@@ -59,8 +66,8 @@
                 <p>Choose which website you want to track in Solvia:</p>
                 
                 <div id="properties-container">
-                    <div class="loading" style="margin: 2rem auto; display: block;"></div>
-                    <p style="text-align: center; margin-top: 1rem;">Loading your websites...</p>
+                    <div class="loading loading-center"></div>
+                    <p class="text-center-margin">Loading your websites...</p>
                 </div>
 
                 <div class="btn-group">
@@ -75,8 +82,8 @@
             <!-- Step 3: Setup Complete -->
             <div class="wizard-step" id="step3">
                 <div id="setup-progress">
-                    <div class="loading" style="margin: 1rem auto; display: block;"></div>
-                    <p style="text-align: center;">Setting up your dashboard...</p>
+                    <div class="loading loading-center-small"></div>
+                    <p class="text-center">Setting up your dashboard...</p>
                 </div>
             </div>
         </div>
@@ -283,7 +290,7 @@
                 html += `
                     <div class="property-item" onclick="selectPropertyItem(${index})">
                         <input type="radio" name="selectedProperty" value="${index}" id="property-${index}">
-                        <label for="property-${index}" style="font-weight: 400;">
+                        <label for="property-${index}" class="font-weight-normal">
                             ${displayUrl}
                             <div class="property-status">
                                 ${isVerified} • ${permissionLevel}${propertyType}
@@ -372,7 +379,7 @@
         function finishSetup() {
             const progressDiv = document.getElementById('setup-progress');
             progressDiv.innerHTML = `
-                <div class="success-message" style="margin-top: 2rem; text-align: center; display: block;">
+                <div class="success-message success-message-centered">
                     <strong>Setup Complete!</strong>
                     <p>Redirecting you to the dashboard...</p>
                 </div>
